# remote-mcp-functions-python

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/agents/: design.agent.md  implement.agent.md  plan.agent.md  test.agent.md  test.mcp.agent.md
.github/instructions/: project.overview.instructions.md
.github/prompts/: poetry.prompt.md
.github/workflows/: ci.yml
infra/: main.bicep  main.parameters.json
infra/app/: api.bicep  keyvault-role.bicep  keyvault-secret.bicep  keyvault.bicep  rbac.bicep
scripts/: inspect_mcp.py  list_zip.py  pack_and_validate.py  push_env_secrets_to_kv.py
src/: function_app.py  requirements.txt
src/functions/: __init__.py  abuseipdb.py  get_snippet.py  hello_mcp.py  save_snippet.py
src/get_snippet/: function.json
src/hello_mcp/: function.json
src/save_snippet/: function.json
src/tests/integration/: test_mcp_http.py
src/tests/unit/: test_abuseipdb_functions.py  test_functions.py  test_functions_edge.py
